--- a/templates/about/about_the_site.html
+++ b/templates/about/about_the_site.html
@@ -8,15 +8,14 @@
     <img id="about-vertical-logo" src="/images/khan-logo-vertical-transparent.png" height=250 width=178 />
 </div>
 <div class="col2 forty-sixty" style="max-width:81%; text-align: justify;">
-<h2 class="main-headline" style="white-space: pre;">A free world-class education for anyone anywhere.</h2>
+<h2 class="main-headline" style="white-space: pre;">Gratis onderwijs voor iedereen overal.</h2>
     <p>
-        The Khan Academy is an organization on a mission. We're a not-for-profit with the goal of changing education for the better by providing a free
-world-class education to anyone anywhere.
+        De Khan Academie is een organisatie zonder winstoogmerk en met een bijzondere missie. Het doel is van de Khan Academie is het onderwijs wereldwijd te verbeteren door het verstrekken van gratis onderwijs aan iedereen, overal. 
+
     </p>
     <p>
-        All of the site's resources are available to anyone. It doesn't matter if you are a student, teacher, 
-home-schooler, principal, adult returning to the classroom after 20 years, or a friendly alien just trying to get a leg up in earthly biology. The Khan Academy's
-materials and resources are available to you completely free of charge.
+        Al het materiaal op de site is voor iedereen beschikbaar of je nu leerling bent, of leraar, of thuisstudent, of schoolhoofd, of een tweedekanser die na twintig jaar weer naar school wil, of een vriendelijk buitenaards wezen dat op deze manier voet aan de grond probeert te krijgen op aarde. Al het materiaal van de Khan Academie en alle hulpmiddelen die wij aanbieden zijn kosteloos beschikbaar voor iedereen.   
+
     </p>
 </div>
 <div class="clear"></div>
@@ -26,30 +25,30 @@ materials and resources are available to you completely free of charge.
 </div>
 
 <div class="col2 sixty-forty" >
-    <h2>How it works for students</h2>
-    <p>Students can make use of our extensive video library, interactive challenges, and assessments from any computer with access to the web.</p>
+    <h2>Hoe werkt Khan voor leerlingen?</h2>
+    <p>Leerlingen kunnen op elke computer, tablet en smartphone gebruik maken van onze uitgebreide collectie video's, oefeningen en persoonlijke rapportage's. Een internetaansluiting is het enige vereiste.</p>
     <ol>
-        <li>{{ youtube.jump_link("Complete custom self-paced learning tool", 0) }}</li>
-        <li>{{ youtube.jump_link("A dynamic system for getting help", 130) }}</li>
-        <li>{{ youtube.jump_link("A custom profile, points, and badges to measure progress", 208) }} </li>
+        <li>{{ youtube.jump_link("Een leerinstrument volledig op maat", 0) }}</li>
+        <li>{{ youtube.jump_link("Een dynamisch hulpsysteem", 130) }}</li>
+        <li>{{ youtube.jump_link("Een persoonlijk profiel, punten en badges om het leerrendement (leertempo en resultaat) bij te houdem.", 208) }} </li>
     </ol><br/>
-    <h2>Coaches, parents, and teachers</h2>
-    <p>Coaches, parents, and teachers have unprecedented visibility into what their students are learning and doing on the Khan Academy.</p>
+    <h2>Hoe werkt Khan voor studiebegeleiders, ouders en leerkrachten?</h2>
+    <p>Met de Khan Academie hebben studiebegeleiders, ouders en leerkrachten helder zicht op wat leerlingen leren en doen.</p>
     <ol>
-        <li>{{ youtube.jump_link("Ability to see any student in detail", 341) }}</li>
-        <li>{{ youtube.jump_link("A real-time class report for all students", 490) }}</li>
-        <li>{{ youtube.jump_link("Better intelligence for doing targeted interventions", 535) }}</li>
+        <li>{{ youtube.jump_link("Een gedetailleerd overzicht van de vorderingen van elke afzonderlijke leerling", 341) }}</li>
+        <li>{{ youtube.jump_link("Actuele rapportage over alle leerlingen", 490) }}</li>
+        <li>{{ youtube.jump_link("Meer informatie om gericht te kunnen begeleiden", 535) }}</li>
     </ol>
 </div>
 <div class="clear" style="margin-bottom:36px;"></div>
 <hr class="margin-bottom: 18px;">
 <div id="screenshot-tour">
     <div class="col1 sixty-forty right">
-        <h2>Over {{ approx_vid_count|escape }} videos</h2>
+        <h2>{{ approx_vid_count|escape }} Meer dan alleen video's</h2>
         <p class="justify">
-            Our <a href="/#browse">library of videos</a> covers <strong>K-12 math</strong>, science topics such as <strong>biology, chemistry, and physics</strong>, and even reaches into the humanities with playlists on <strong>finance and history</strong>. Each video is a digestible chunk, approximately 10 minutes long, and especially purposed for viewing on the computer.<br/><br/>
-            <em>"I teach the way that I wish I was taught. The lectures are coming from me, an actual human being who is fascinated by the world around him."</em><br/>
-            &mdash;Sal
+            Onze <a href="/#browse">collectie video's</a> omvat <strong>reken en wiskunde,</strong>maar ook video's over oefeningen die nog in ontwikkeling zijn,zoals <strong>. Elke video is een les van tussen de vijf en tien minuten waarin uitleg wordt gegeven over één onderwerp. 
+            Geïnspireerd op de video's van Salman Khan en zijn woorden: ''Ik geef les zoals ik zelf les had willen krijgen. De lessen komen van mij en ik ben een levensecht mens die gefascineerd is door de wereld om hem heen. </em><br/>
+            &mdash;
         </p>
     </div>
     <div class="col2 sixty-forty screenshot">
@@ -62,20 +61,20 @@ materials and resources are available to you completely free of charge.
         <img class="rounded-background" src="/images/screenshot-tour/problems.png" style="width:400px;" />
     </div>
     <div class="col2 forty-sixty left">
-        <h2>A world of skills to practice, with help along the way</h2>
+        <h2>Een enorme hoeveelheid oefeningen, met ondersteuning op elk gewenst moment</h2>
         <p class="justify">
-        <a href="/exercisedashboard">Practice math at your own pace</a> with our adaptive assessment environment. You can <strong>start at 1+1 and work your way into calculus</strong> or jump right into whatever topic needs some brushing up.<br/><br/>
-        Each problem is randomly generated, so you never run out of practice material. <strong>If you need a hint, every single problem can be broken down, step-by-step, with one click.</strong> If you need more help, you can always watch a related video.
+        <a href="/exercisedashboard">Oefen rekenen en wiskunde in je eigen tempo met oefeningen die op je eigen leerstijl zijn afgestemd.</a> with our adaptive assessment environment. Je kunt <strong>beginnen met 1+1 en zo verder oefenen met rekenen </strong> of direct beginnen met een ander onderwerp waarover je kennis is weggezakt <br/><br/>
+        Er is geen vaste volgorde in oefeningen of sommen.Ze worden willekeurig aangeleverd zodat ze steeds weer nieuw zijn en je nooit zonder oefenmateriaal zit. <strong>Als je een aanwijzing nodig hebt, kan een probleem met een eenvoudige klik op de ''hint'' knop worden opgedeeld in stukjes.</strong> Als je meer hulp nodig hebt, kun je altijd naar een video kijken die met het onderwerp te maken heeft. 
         </p>
     </div>
     <div class="clear"></div>
     <br/><hr class="thin"/><br/>
 
     <div class="col1 sixty-forty right">
-        <h2>Your stats, instantly</h2>
+        <h2>Actuele volgsystemen</h2>
         <p class="justify">
-        Every time you work on a problem or watch a video, the Khan Academy remembers what you've learned and where you're spending your time. We keep all of this data private but expose powerful statistics to each user and their coaches. You get <strong>at-a-glance information about everything you've been learning</strong> and whether or not you've been hitting your goals.<br/><br/>
-        You can drill all the way down from a bird's-eye view of your profile into each and every skill practice problem that you've ever worked on. You'll see <strong>real, hard data about your increasing mastery</strong> of math. 
+        De Khan Academie houdt precies bij wat je doet en welke vorderingen je maakt wanneer je met de Khan Academie werkt. Al deze gegevens zijn persoonlijk en worden als zodanig behandeld. Er zijn wel heldere overzichten beschikbaar voor elke gebruiker en zijn begeleider (of coach). Wanneer je erom vraagt, krijg je <strong>ogenblikkelijk informatie over alles wat je hebt geleerd<br/><br/> en de resultaten die hebt behaald.
+        Je kunt elke gewenste informatie opvragen over het totaal van je activiteiten tot aan elke oefening die je hebt gemaakt. Je vindt <strong>echte informatie over je voortgang en je toename van kennis over bijvoorbeeld</strong> wiskunde. 
         </p>
     </div>
     <div class="col2 sixty-forty screenshot">
@@ -88,22 +87,22 @@ materials and resources are available to you completely free of charge.
         <img class="rounded-background" src="/images/screenshot-tour/map-small.png" style="width:400px;" />
     </div>
     <div class="col2 forty-sixty left">
-        <h2>A map of knowledge</h2>
+        <h2>De kenniskaart</h2>
         <p class="justify">
             <img class="rounded-background" src="/images/screenshot-tour/challenges-small.png" style="float:right;margin-left:20px;"/>
-            <a href="/exercisedashboard">The knowledge map</a> shows all of our challenges, skills, and concepts. You can <strong>zoom in and out and pan around</strong> all the different skills and challenges, just like on a normal map. You can start working anywhere on the map, and the Khan Academy will suggest the best skills for you to work on. We'll even remind you when you need a review.<br/><br/>
-            <strong>As you zoom out of the knowledge map, you'll find our challenges</strong>, which combine the concepts from multiple smaller skills. Zooming all the way out of the map and completing all of our challenges is a sign of math mastery.<br/><br/>
-            We're constantly adding new skills to be discovered.
+            <a href="/exercisedashboard">De kenniskaart</a> toont je al onze oefeningen. Je kunt <strong>in- en uitzoomen en rondneuzen</strong> in alle verschillende oefeningen, net als bij een gewone kaart. Je kunt op elke gewenste plek beginnen aan de oefeningen. De Khan Academie adviseert je over de oefeningen die het meest geschikt zijn. Je krijgt ook een seintje als het raadzaam is om oefeningen te gaan herhalen.<br/><br/>
+            <strong>Als je de kenniskaart helemaal uitzoomt</strong>, vind je al onze uitdagingen waarbij een aantal kleinere oefeningen met elkaar in verband worden gebracht. Wanneer je alle oefeningen succesvol gemaakt hebt beheers je de wiskunde. <br/><br/>
+            Wij zullen nieuwe oefeningen blijven toevoegen aan de kenniskaart.
         </p>
     </div>
     <div class="clear"></div>
     <br/><hr class="thin"/><br/>
 
     <div class="col1 sixty-forty right">
-        <h2>Your classroom data...finally</h2>
+        <h2>Het klassenoverzicht</h2>
         <p class="justify">
-        Teachers and coaches can access all of their students' data. You can <strong>get a summary of class performance as a whole or dive into a particular student's profile</strong> to figure out exactly which topics are problematic. <a href="/class_profile">The class profile</a> lets coaches glance at their dashboard and quickly figure out how to best spend their time teaching.<br/><br/>
-        We've put a lot of energy into making sure that the Khan Academy empowers teachers by giving them access to the data they should've had for years. You'll <strong>know instantly if a student is struggling in multiplying fractions</strong>...or if she hit a streak and is now far ahead of the class. 
+        Leerkrachten en studiebegeleiders hebben toegang tot alle gegevens van hun leerlingen. Een leerkracht of begeleider krijgt <strong>een overzicht van wat de klas in zijn geheel presteert, maar ook van de individuele prestaties van een leerling,</strong> zodat duidelijk is waar de problemen of juist talenten schuilen. <a href="/class_profile">Het profiel van de klas</a> geeft de studiebegeleider de gelegenheid zich te concentreren op juist die onderwerpen waar extra aandacht nodig is.<br/><br/>
+        Met het leerlingvolgsysteem kun je <strong>in een oogopslag zien of een leerling problemen heeft met het vermenigvuldigen van breuken, </strong>...of juist een groot talent schijnt te hebben en mijlenver voor ligt op de klas.
         </p>
     </div>
     <div class="col2 sixty-forty screenshot">
@@ -116,11 +115,11 @@ materials and resources are available to you completely free of charge.
         <img class="rounded-background" src="/images/screenshot-tour/badges-small.png" style="width:400px;" />
     </div>
     <div class="col2 forty-sixty left">
-        <h2>Badges worth bragging about</h2>
+        <h2>Badges waar je trots op kunt zijn</h2>
         <p class="justify">
             <img class="rounded-background" src="/images/screenshot-tour/badges-3.png" style="width:228px;float:right;margin-left:20px;"/>
-            We're full of game mechanics. As soon as you login, you'll start earning badges and points for learning. The more you challenge yourself, the more bragging rights you'll get.<br/><br/>
-            We've heard of students spending hour after hour watching physics videos and 5th graders relentlessly tackling college-level math to earn Khan Academy badges. Some of the smaller badges are very easy, but <a href="/badges/view">the most legendary badges</a> might require years of work.
+            Khan Academie bevat volop game-elementen. Zodra je inlogt ga je badges en punten verdienen met je activiteiten. Hoe meer jij jezelf uitdaagt, des te meer verdien je om trots op te zijn.<br/><br/>
+            Een aantal van de kleinere badges zijn makkelijk te verdienen, <a href="/badges/view">de meest waardevolle badges</a> vergen meer oefening en soms jarenlange inspanning.
         </p>
     </div>
     <div class="clear"></div>
