--- a/templates/contribute.html
+++ b/templates/contribute.html
@@ -11,7 +11,7 @@
 {% block pagecontent %}
 <article id="contribute">
     <div>
-        <h2 class="section-headline">Translate our lessons</h2>
+        <h2 class="section-headline">Translatex our lessons</h2>
         <div class="col1 sixty-forty" style="min-height: 1px;">
             <div class="col1 fifty-fifty">
                 <div id="highchart-container" style="margin-top: -15px; margin-right: 50px; margin-left: 50px;">
