--- a/templates/coach_resources/view_demo.html
+++ b/templates/coach_resources/view_demo.html
@@ -9,20 +9,18 @@
     <div class="col2 fifty-fifty">
         <h2 class="main-headline" style="white-space: pre;">Demo</h2>
         <p>
-        In addition to the tremendous content that Khan Academy provides via video lessons and
-        practice exercises, there is also a wealth of data that a coach can access about
-        his/her classroom. The short video on the left explains what some of the capabilities are.
+        Naast de content die de Khan Academie biedt met de video's en oefeningen, kan een coach ook nog een hoop informatie over zijn of haar klas en/of student(en) verkrijgen. De video links legt uit wat de mogelijkheden zijn.
         </p>
 
         <p>
-        To experience this first hand, we have created a way for you to access data for a
-        classroom setting by simulating the scenario. Some of us at Khan Academy have added ourselves
-        to a class, and you can access this class through a <a href="/coach/accessdemo" target="_blank">
+        Om dit zelf te ontdekken hebben we een manier ontwikkeld om informatie over je klas te krijgen door het scenario te simuleren. experience this first hand, we have created a way for you to access data for a
+        classroom setting by simulating the scenario. Sommige van ons hebben zich toegevoegd aan en klas, je krijgt toegang tot deze 
+    	klas via<a href="/coach/accessdemo" target="_blank">
         demo</a>.
         <ul class=bullet>
-            <li>Simply click on the demo button (if you are logged into your account, you will need to log out first)
-            <li>Experience the power of the data by clicking around the different reports
-            <li>Logout of the demo account when you are done (and log back into your account)
+            <li>Klik op de demoknop (als je ingelogd bent met je eigen account moet je eerst uitloggen)
+            <li>Ontdek de kracht van data door de verschillende rapporten te bekijken. 
+            <li>Wanneer je klaar bent kun je uitloggen van het demoaccount(en inloggen met je eigen account)
         </ul>
         </p>
 
