Homepage & page templates

--- a/javascript/shared-package/topic-browser-pulldown.handlebars
+++ b/javascript/shared-package/topic-browser-pulldown.handlebars
@@ -15,6 +15,6 @@
       <li class="level{{ level }}{{#if has_children }} is-subheader{{/if}}{{#if has_divider }} has-divider{{/if}}"><a {{#if href }}href="{{ href }}"{{/if}} data-tag="TopicBrowserPulldown" class="menulink">{{ title }}</a></li>
     {{/if}}
   {{/each}}
-  <li class="has-divider"><a href="/#browse" data-tag="TopicBrowserPulldownBrowse" class="menulink">Browse all content</a></li>
+  <li class="has-divider"><a href="/#browse" data-tag="TopicBrowserPulldownBrowse" class="menulink">Alle videos</a></li>
 </ul>
 
