--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -44,14 +44,14 @@
                 <tr>
                     <td class="social-action">
                         <span id="fb-like-badge">
-                            <div id="fb-root"></div><fb:like href="http://www.khanacademy.org" send="true" layout="button_count" width="100" show_faces="false" font=""></fb:like>
+                            <div id="fb-root"></div><fb:like href="http://www.khanacademie.nl" send="true" layout="button_count" width="100" show_faces="false" font=""></fb:like>
                         </span>
                     </td>
                     <td class="social-action">
-                        <a href="http://twitter.com/share" class="twitter-share-button" data-counturl="http://www.khanacademy.org" data-url="http://www.khanacademy.org" data-text="Watch. Practice. Learn almost anything for free." data-count="horizontal" data-via="khanacademy">Tweet</a>
+                        <a href="http://twitter.com/share" class="twitter-share-button" data-counturl="http://www.khanacademie.nl" data-url="http://www.khanacademie.nl" data-text="Kijk. Oefen. Leer bijna alles online, en gratis." data-count="horizontal" data-via="khanacademie">Tweet</a>
                     </td>
                     <td class="social-action">
-                        <g:plusone size="medium" href="http://www.khanacademy.org"></g:plusone>
+                        <g:plusone size="medium" href="http://www.khanacademie.nl"></g:plusone>
                     </td>
                 </tr>
                 <tr>
