--- a/templates/about/about_the_site.html
+++ b/templates/about/about_the_site.html
@@ -10,8 +10,9 @@
 <div class="col2 forty-sixty" style="max-width:81%; text-align: justify;">
 <h2 class="main-headline" style="white-space: pre;">Gratis onderwijs voor iedereen overal.</h2>
     <p>
-        De Khan Academie is een organisatie zonder winstoogmerk en met een bijzondere missie. Het doel is van de Khan Academie is het onderwijs wereldwijd te verbeteren door het verstrekken van gratis onderwijs aan iedereen, overal. 
-
+        De Khan Academie is een organisatie zonder winstoogmerk en met een bijzondere missie. Het doel is van de Khan Academie is het onderwijs In Nederland te verbeteren door het verstrekken van gratis onderwijs aan iedereen, overal. 
+		Geïnspireerd door het bijzondere werk van Salman Khan met de <a href="http://khanacademy.org"> Khan Academy </a> besloot Wijnand Baretta eind 2011 de Amerikaanse website aan te passen en te vertalen naar de Nederlandse onderwijssituatie. Ontdek zelf wat er tot nu toe is bereikt! 
+		Ook geïnspireerd geraakt? Klik op Help Mee hoe je zelf een bijdrage kunt leveren!
     </p>
     <p>
         Al het materiaal op de site is voor iedereen beschikbaar of je nu leerling bent, of leraar, of thuisstudent, of schoolhoofd, of een tweedekanser die na twintig jaar weer naar school wil, of een vriendelijk buitenaards wezen dat op deze manier voet aan de grond probeert te krijgen op aarde. Al het materiaal van de Khan Academie en alle hulpmiddelen die wij aanbieden zijn kosteloos beschikbaar voor iedereen.   
