--- a/templates/page_footer_short.html
+++ b/templates/page_footer_short.html
@@ -3,16 +3,7 @@
         <div class="inner">
         <div id="copyright" class="tiny" title="Version: {{ App.version|escape }}">
             <small>
-                &copy;2012
-                {# see http://www.google.com/support/webmasters/bin/answer.py?answer=1408986 #}
-                {% if author_profile -%}
-                <small>
-                <a style="padding:0;margin:0;text-decoration:none" href="{{author_profile}}?rel=author">+Khan</a>
-                </small>
-                {% else %}
-                Khan
-                {%- endif %}
-                Academy&#0153;
+                &copy;2012 Khan Academie, originele Engelse content door Khan Academy&#0153;
             </small>
             <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/" id="creative-commons-link"></a>
         </div>
