--- a/templates/page_footer_short.html
+++ b/templates/page_footer_short.html
@@ -9,7 +9,7 @@
         </div>
         <span class="footer-links">
             {% if not user_data or not user_data.is_child_account() %}
-            	<a href="/reportissue?type=Defect&issue_labels={{issue_labels|urlencode}}" id="report" data-tag="Footer">Problemen Melden</a>
+            	<a href="/reportissue?type=Defect&issue_labels={{issue_labels|urlencode}}" id="report" data-tag="Footer">Fouten melden</a>
             {% endif %}
             {% if is_mobile_capable %}
                 <span class="sep">|</span>
